--- a/Practica_github.ipynb
+++ b/Practica_github.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyManAf7qbd5FRG8Be3iVLm9",
+      "authorship_tag": "ABX9TyOEmBmSyYO8Dnl36Hn+2oOf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ivan0054/Prueba-de-Github/blob/main/Practica_github.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ivan0054/Prueba-de-Github/blob/brunch1/Practica_github.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -55,6 +55,38 @@
           "text": [
             "¡Hola desde Colab!\n",
             "La suma de 5 y 10 es: 15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d58005fb",
+        "outputId": "9d79a912-3922-4bb9-ed45-92724bfa8477"
+      },
+      "source": [
+        "import math\n",
+        "\n",
+        "# Define the radius of the circle\n",
+        "radius = 5\n",
+        "\n",
+        "# Calculate the area\n",
+        "area = math.pi * (radius ** 2)\n",
+        "\n",
+        "# Print the result\n",
+        "print(f\"El área de un círculo con radio {radius} es: {area}\")"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El área de un círculo con radio 5 es: 78.53981633974483\n"
           ]
         }
       ]
